--- a/final/styles/events.css
+++ b/final/styles/events.css
@@ -55,3 +55,40 @@
     text-decoration: none;
     color: black;
 }
+
+dialog {
+    margin: auto;
+    padding: 0.5rem;
+    background-color: var(--secondary-colour);
+    border: 5px solid var(--accent-colour);
+    border-radius: 20px;
+    text-align: center;
+    max-width: 600px;
+}
+
+dialog::backdrop {
+    background-color: rgb(0 0 0 / 50%);
+}
+
+dialog p {
+    margin: 0.5rem;
+}
+
+dialog button {
+    margin: 0.5rem;
+    margin-top: 1rem;
+    display: block;
+    text-decoration: none;
+    color: black;
+    background-color: var(--primary-colour);
+    border-radius: 10px;
+    padding: 5px;
+    font-weight: bold;
+    border: 2px solid var(--accent-colour);
+    width: 40%;
+    justify-self: center;
+}
+
+dialog button:hover {
+    background-color: var(--secondary-colour);
+}
